k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  curriculum-beta
  labels:
    service: web
spec:
  selector:
    matchLabels:
      service: web
  template:
    metadata:
      labels:
        service: web
    spec:
      containers:
        - name: web
          image: gmri/curriculum
          ports: 
            - containerPort: 8080
          volumeMounts:
            - name:  django-static
              mountPath:  /static
      imagePullSecrets:
        - name:  docker-hub-secrets.yaml
      volumes:
        - name: django-static
          emptyDir: {}
