k8s/web-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  web
spec:
  selector:
    app:  web
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
