k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: curriculum-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, OPTIONS"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost http://curriculum.realworldrealscience.org"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080


# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: curriculum-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/enable-cors: "true"
#     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, OPTIONS"
#     # nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost http://curriculum.realworldrealscience.org"
#     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/proxy-body-size: 50m
# spec:
#   rules:
#   - host: teach.gmri.org
#     http:
#       paths:
#         - path: /
#           backend:
#             serviceName: web
#             servicePort: 8080
#   tls:
#   - hosts:
#     - teach.gmri.org
#     secretName: gmri-ca-tls
